# meow

./: .gitignore  CMakelists.txt  drive.cpp  gl_extensions.cpp  gl_extensions.h
cmake/: SDL2.cmake  glm.cmake  gmock.cmake
src/: buffer.h  buffer_allocator.cpp  buffer_allocator.h  di.cpp  di.h  drive.cpp  driver.cpp  driver.h  driver_runner.cpp  driver_runner.h  exception_formatter.cpp  exception_formatter.h  file_system_service.cpp  file_system_service.h  gl_extensions.cpp  gl_extensions.h  ibuffer_allocator.h  idriver.h  idriver_runner.h  iexception_formatter.h  ifile_system_service.h  ilog_service.h  imain_loop_service.h  imodel_service.h  ireader.h  irenderable_service.h  ishader_program_service.h  ishader_service.h  iwindow_service.h  lambert_driver.cpp  lambert_driver.h  log_service.cpp  log_service.h  logged_shader_service.cpp  logged_shader_service.h  main_loop_service.cpp  main_loop_service.h  math.cpp  meow_di.cpp  meow_di.h  (+19 more)
src/entities/: camera.h  camera_service.cpp  camera_service.h  icamera.h  icamera_service.h
src/file_system/: file.cpp  file.h  file_system_service.cpp  file_system_service.h  ifile.h  ifile_system_service.h  iline_reader.h  itext_reader.h  line_reader.cpp  line_reader.h  text_reader.cpp  text_reader.h
src/gl/: ishader_program_service.h  ishader_service.h  ivbo.h  ivbo_service.h  logged_shader_program_service.cpp  logged_shader_program_service.h  logged_shader_service.cpp  logged_shader_service.h  shader_program_service.cpp  shader_program_service.h  shader_service.cpp  shader_service.h  vbo.cpp  vbo.h  vbo_service.cpp  vbo_service.h
src/infra/: buffer_allocator.cpp  buffer_allocator.h  di.h  ibuffer_allocator.h  meow_di.cpp  meow_di.h  optional.h  snprintf_polyfill.h
test/: CMakeLists.txt  math_test.cpp
test/integration/: obj_reader_test.cpp  shader_service_test.cpp
(+45 files in other folders)
